--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script type="text/javascript" charset="utf-8" src="/javascripts/lib/sea.js"></script>
-
+    <script type="text/javascript">
+       seajs.use('tree.widget.util');
+    </script>
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
   </body>
 </html>
